# mcp-code-cst-editior

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: cst-editor.agent.md
.github/chatmodes/: cst-implementer.chatmode.md
.github/prompts/: add-language.prompt.md  cats-react-site.prompt.md
.github/skills/mcp-tool-authoring/: SKILL.md
.github/skills/tree-sitter-grammar-integration/: SKILL.md
.github/workflows/: ci.yml
cst-mcp-server/: Cargo.toml
cst-mcp-server/src/: access.rs  cst.rs  lexer.rs  lib.rs  main.rs  state.rs  tools.rs  watcher.rs
cst-mcp-server/tests/: integration.rs
legacy/: Cargo.toml  cst-editor.agent.md
legacy/cst-mcp-server/src/: lib.rs  state.rs  tools.rs
scripts/: setup-inotify.sh
