[package]
name = "cst-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for structural code editing via Concrete Syntax Trees"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
rowan = "0.16.1"
notify = "8.2.0"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
anyhow = "1.0"
thiserror = "2.0"
