[package]
name = "cst-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for structural code editing via Concrete Syntax Trees"

[lib]
name = "cst_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "cst-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io"] }
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
notify = "8.2.0"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
